<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stardust Notepad</string>
    <string name="username" translatable="false">x__</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="new_note">New Note</string>
    <string name="talk_with_god">Talk with God</string>
    <string name="new_with_qr">New with QR</string>
    <string name="main">Main</string>
    <string name="archive">Archive</string>
    <string name="bin">Bin</string>
    <string name="console_log">Console Log</string>
    <string name="settings">Settings</string>
    <string name="ip_address">IP ADDRESS</string>
    <string name="ok" translatable="false">OK</string>
    <string name="username_email">Username</string>
    <string name="all_notes">All Notes:</string>
    <string name="note_number" translatable="false">note_number</string>
    <string name="registration_ndate">Registration\nDate:</string>
    <string name="reg_date" translatable="false">reg_date</string>
    <string name="select_language">Select Language</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="login_here">Login here</string>
    <string name="create_account">Create account</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="share">Share</string>
    <string name="created_at">Created at:</string>
    <string name="updated_at">Updated at:</string>
    <string name="logout">Logout</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
</resources>