<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
                <item
                    android:id="@+id/home"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/main"
                    app:showAsAction="always"
                    app:actionViewClass="android.widget.TextView"/>

                <item
                    android:id="@+id/archive"
                    android:icon="@drawable/baseline_archive_24"
                    android:title="@string/archive"
                    app:showAsAction="ifRoom"
                    app:actionViewClass="android.widget.TextView"/>

                <item
                    android:id="@+id/bin"
                    android:icon="@drawable/baseline_delete_24"
                    android:title="@string/bin"
                    app:showAsAction="ifRoom"
                    app:actionViewClass="android.widget.TextView"/>
    </group>

    <group>
        <item
            android:id="@+id/devlog"
            android:icon="@drawable/baseline_developer_mode_24"
            android:title="@string/console_log"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom"
            app:actionViewClass="android.widget.TextView"/>
    </group>

    <group>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout"
            android:title="@string/logout"
            app:showAsAction="always"/>
    </group>

</menu>

