<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191C1E"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:id="@+id/login_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login_ui"
            android:backgroundTint="#C3F4F4F4"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play_bold"
                android:paddingBottom="30dp"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_login_ui"
                android:backgroundTint="#ffffff"
                android:fontFamily="@font/play_bold"
                android:hint="@string/e_mail_address"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_login_ui"
                android:backgroundTint="#ffffff"
                android:fontFamily="@font/play_bold"
                android:hint="@string/password"
                android:text=""
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/play_bold"
                    android:text="@string/you_don_t_have_an_account"
                    android:textColor="#000000"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/play_bold"
                    android:text="@string/register_here"
                    android:textAllCaps="false"
                    android:textColor="#191C1E" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#191C1E"
                android:fontFamily="@font/play_bold"
                android:paddingHorizontal="20dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>